# OpenCV

S_Cmake_Opencv/: CMakeLists.txt
Tutorial_Opencv_CMake/: CMakeLists.txt  Hello_opencv.cpp
